# orthotope

./: .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  Justfile  LICENCE  README.md
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/src/: lib.rs  main.rs
examples/: batched_embeddings.rs  global_alloc.rs  smoke.rs  stats.rs  thread_cache_per_thread.rs
src/: allocator.rs  api.rs  arena.rs  central_pool.rs  config.rs  error.rs  free_list.rs  global_alloc.rs  header.rs  large_object.rs  lib.rs  size_class.rs  stats.rs  thread_cache.rs
tests/: api_smoke.rs  arena.rs  concurrency.rs  custom_alignment_api.rs  exhaustion.rs  global_alloc.rs  global_alloc_binary.rs  hardening.rs  large_allocation_reuse.rs  reuse.rs  shared_thread_cache_api.rs  size_class.rs  size_class_contract.rs  small_double_free.rs  stats_api_regression.rs
